--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1463,6 +1463,36 @@
     "sidebar.messages.button.aria.label": "Open chat with an admin",
     "sidebar.notifications.button.aria.label": "Open notification center",
     "sidebar.dark.mode.button.aria.label": "Toggle light/dark mode",
+
+
+    "api.home.config.api.btn.label": "Manage API",
+    "api.home.config.api.menu.configure": "Configure",
+    "api.home.config.api.menu.clone": "Duplicate",
+    "api.home.config.api.menu.new_version": "Create new version",
+    "api.home.config.api.menu.transfer": "Transfer",
+    "api.home.config.api.menu.delete": "Delete",
+    "api.home.right.panel.transfer.title": "Transfer API",
+
+    "api.home.config.api.description.btn.label": "Edit description",
+    "api.home.description.right.panel.title": "Edit description",
+
+    "api.home.config.api.documentation.btn.label.view": "View documentation",
+    "api.home.config.api.documentation.btn.label.edit": "Edit documentation",
+
+    "api.home.config.api.spec.btn.label": "Manage API specification",
+    "api.home.config.api.spec.menu.edit": "Edit",
+    "api.home.config.api.spec.menu.delete": "Delete",
+    "api.home.spec.right.panel.title": "Edit API specification",
+
+    "api.home.config.api.test.btn.label": "Manage test configuration",
+    "api.home.config.api.test.menu.edit": "Edit",
+    "api.home.config.api.test.menu.delete": "Delete",
+
+    "api.home.config.api.news.btn.label": "Manage publications",
+    "api.home.config.api.news.menu.update": "Update publication",
+    "api.home.config.api.news.menu.create": "Create publication",
+    "api.home.config.api.news.menu.delete": "Delete publication",
+
     "api.home.config.api.aria.label": "Configuration",
     "api.home.update.api.btn.label": "Edit",
     "api.home.clone.api.btn.label": "Duplicate",
@@ -1473,6 +1503,7 @@
     "api.home.create.api.form.title": "Create new Api",
     "api.home.transfer.api.form.title": "Transfer %s ownership",
     "api.home.update.description.form.title": "Update Api description",
+
     "api.home.update.plan.form.title": "Edit usage plan configuration",
     "api.home.create.plan.form.title": "Create new usage plan",
     "api.home.create.plan.modal.title": "Create new usage plan",
@@ -1505,19 +1536,17 @@
     "usage.plan.form.trial.period.help": "Set the trial period during which the customer will not be charged.",
     "usage.plan.form.payment.settings.label": "Third-party payment provider",
     "usage.plan.form.payment.settings.id.label": "Target",
-    "update.api.details.panel.title": "API details",
     "update.api.description.successful.toast.label": "Description has been succesfully updated",
     "api.form.header.flow.label": "Header",
     "api.form.cms.header.label": "Custom API header from CMS page",
     "api.form.cms.header.help": "Define a custom API header by using a CMS page.",
-    "update.api.openapi.btn.label": "Edit API documentation",
-    "update.api.openapi.delete.btn.label": "Delete API documentation",
+    "update.api.openapi.btn.label": "Edit API specification",
     "update.api.testing.btn.label": "Edit API testing configuration",
     "update.api.testing.delete.btn.label": "Delete testing configuration",
     "update.api.successful.toast.label": "API succesfully updated",
-    "update.api.openapi.not.found.alert": "No API documentation configured.",
+    "update.api.openapi.not.found.alert": "No API specification configured.",
     "update.api.testing.not.found.alert": "No API testing configured.",
-    "update.api.documentation.not.found.alert": "No API documenation configured",
+    "update.api.documentation.not.found.alert": "No API specification configured",
     "add.api.documention.btn.label": "Create your first documentaiton page",
     "api.consumption.plan.btn.aria.label": "View the consumption of the %s plan",
     "api.consumption.plan.btn.label": "View the consumption",
