--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1438,19 +1438,13 @@
   "delete.user.confirm.modal.description.3": "Toutes les API gérées par cet utilisateur.",
   "delete.user.confirm.modal.description.4": "Toutes les souscriptions aux API gérées par cet utilisateur.",
   "delete.subscription.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cette souscription ? Cette action est irréversible.",
-
   "delete.subscription.confirm.modal.description.single": "Cette action entraînera la suppression définitve de la clé d'API associée.",
-
   "delete.subscription.confirm.modal.description.child": "La clé d'API parent associé à l'API %s sera mise à jour et ne permettra plus l'accès à l'APi %s.",
-
   "delete.subscription.confirm.modal.description.parent.deleteAll": "Toutes les souscriptions et clés API associées seront également supprimées de manière irréversible.",
   "delete.subscription.confirm.modal.description.parent.deleteAll.list": "Souscriptions concernées :",
-
   "delete.subscription.confirm.modal.description.parent.promoteChild": "La souscription à %s a été désignée comme nouveau parent. Les ressources associées resteront inchangées sauf l'access à %s.",
-
   "delete.subscription.confirm.modal.description.parent.splitChildren": "Les souscriptions enfants deviendront autonomes et de nouvelles clés d'API individuelles seront générées.",
   "delete.subscription.confirm.modal.description.parent.splitChildren.list": "Nouvelles souscriptions générées pour les ressources :",
-
   "delete.plan.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer ce plan ? Cette action est irréversible et entraînera la suppression de :",
   "delete.plan.confirm.modal.description.2": "Toutes les clés d'API associées à ce plan.",
   "delete.environment.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cet environnement ? Cette action est irréversible et entraînera la suppression de :",
@@ -1468,8 +1462,33 @@
   "sidebar.messages.button.aria.label": "Ouvrir le chat avec un admin",
   "sidebar.notifications.button.aria.label": "Ouvrir le centre de notifications",
   "sidebar.dark.mode.button.aria.label": "Activer le mode clair/sombre",
+
+  "api.home.config.api.btn.label": "Gérer l'API",
+  "api.home.config.api.menu.configure": "Configurer",
+  "api.home.config.api.menu.clone": "Dupliquer",
+  "api.home.config.api.menu.new_version": "Créer une nouvelle version",
+  "api.home.config.api.menu.transfer": "Transférer",
+  "api.home.config.api.menu.delete": "Supprimer",
+  "api.home.right.panel.transfer.title": "Transferer l'API",
+  "api.home.config.api.description.btn.label": "Modifier la description",
+  "api.home.description.right.panel.title": "Modifier la description",
+  "api.home.config.api.documentation.btn.label": "Gérer la documentation",
+  "api.home.config.api.documentation.btn.label.view": "Voir la documentation",
+  "api.home.config.api.documentation.btn.label.edit": "Modifier la documentation",
+  "api.home.config.api.spec.btn.label": "Gérer la spécification de l'API",
+  "api.home.config.api.spec.menu.edit": "Éditer",
+  "api.home.config.api.spec.menu.delete": "Supprimer",
+  "api.home.spec.right.panel.title": "Éditer la spécification de l'API",
+  "api.home.config.api.test.btn.label": "Gérer la configuration des tests",
+  "api.home.config.api.test.menu.edit": "Éditer",
+  "api.home.config.api.test.menu.delete": "Supprimer",
+  "api.home.config.api.news.btn.label": "Gérer les publications",
+  "api.home.config.api.news.menu.update": "Mettre à jour la publication",
+  "api.home.config.api.news.menu.create": "Créer une publication",
+  "api.home.config.api.news.menu.delete": "Supprimer la publication",
+  
   "api.home.config.api.aria.label": "Configuration",
-  "api.home.update.api.btn.label": "Éditer",
+  "api.home.update.api.btn.label": "Configurer",
   "api.home.clone.api.btn.label": "Dupliquer",
   "api.home.create.version.api.btn.label": "Créer une nouvelle version",
   "api.home.transfer.api.btn.label": "Transférer",
@@ -1510,19 +1529,17 @@
   "usage.plan.form.trial.period.help": "Définissez la période d'essai pendant laquelle le client ne sera pas facturé.",
   "usage.plan.form.payment.settings.label": "Fournisseur de paiement tiers",
   "usage.plan.form.payment.settings.id.label": "Cible",
-  "update.api.details.panel.title": "Details de l'API",
   "update.api.description.successful.toast.label": "La description a été modifée avec succès.",
   "api.form.header.flow.label": "Entête",
   "api.form.cms.header.label": "En-tête d'API personnalisé à partir de la page CMS",
   "api.form.cms.header.help": "Définissez un en-tête d'API personnalisé à l'aide d'une page CMS.",
-  "update.api.openapi.btn.label": "Editer la documentation d'API",
-  "update.api.openapi.delete.btn.label": "Supprimer la documentation d'API",
+  "update.api.openapi.btn.label": "Éditer la spécification d'API",
   "update.api.testing.btn.label": "Editer la configuration de test de l'API",
   "update.api.testing.delete.btn.label": "Supprimer la configuration de test de l'API",
   "update.api.successful.toast.label": "API succesfully updated",
-  "update.api.openapi.not.found.alert": "Aucune documentation d'API configurée.",
+  "update.api.openapi.not.found.alert": "Aucune spécification d'API configurée.",
   "update.api.testing.not.found.alert": "Aucun test d'API configuré.",
-  "update.api.documentation.not.found.alert": "Aucune documentation d'API configuré.",
+  "update.api.documentation.not.found.alert": "Aucune spécification d'API configuré.",
   "add.api.documention.btn.label": "Créer une première page de documentation",
   "api.consumption.plan.btn.aria.label": "Voir la consommation du plan %s",
   "api.consumption.plan.btn.label": "Voir la consommation",
