Add some translations

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -550,8 +550,8 @@
     "Forgot your password ?": "Forgot your password?",
     "create.account.link.label": "Create an account",
     "Api saved": "API saved",
-    "api.created.success": "API %s created",
-    "group.created.success": "API group %s created",
+    "api.created.successful.toast": "API %s has been successfully created",
+    "apigroup.created.successful.toast": "API group %s has been successfully created",
     "oops, something went wrong.": "oops, something went wrong.",
     "personal.token.empty.error": "Your personal token can't be empty",
     "remove.user.success": "user %s is successfully deleted",
@@ -565,10 +565,9 @@
     "api.creation.title.modal": "Select the team for which to create new API",
     "api.creation.description.modal": "You are going to create an API. For which team do you want to create it?",
     "api.creation.right.panel.title": "API creation",
-    "api.creation.successful.toast": "API %s successfully created",
+    "apigroup.creation.right.panel.title": "API group creation",
     "apigroup.creation.title.modal": "Select the team for which to create new APIs group",
     "apigroup.creation.description.modal": "You are going to create an APIs group. For which team do you want to create it?",
-    "apigroup.creation.successful.toast": "APIs group %s successfully created",
     "Set font family from asset": "Set font family from asset",
     "Public": "Public",
     "Private": "Private",
@@ -649,10 +648,10 @@
     "Your message": "Your message",
     "Send": "Send",
     "delete.api.success": "Api %s has been successfully deleted",
-    "create.plan.succesful.toast.label": "Usage plan %s has been successfully created",
-    "delete.plan.succesful.toast.label": "Usage plan %s has been successfully deleted",
-    "create.environment.succesful.toast.label": "Environment %s has been successfully created",
-    "delete.environment.succesful.toast.label": "Environment %s has been successfully deleted",
+    "create.plan.successful.toast.label": "Usage plan %s has been successfully created",
+    "delete.plan.successful.toast.label": "Usage plan %s has been successfully deleted",
+    "create.environment.successful.toast.label": "Environment %s has been successfully created",
+    "delete.environment.successful.toast.label": "Environment %s has been successfully deleted",
     "otoroshi.settings.deleted.success": "Otoroshi settings successfully deleted",
     "otoroshi.settings.created.success": "Otoroshi settings successfully created",
     "otoroshi.settings.updated.success": "Otoroshi settings successfully updated",
@@ -1241,9 +1240,7 @@
     "third-party.payment.settings.delete.confirm.message": "Are your sure to delete this settings?",
     "third-party.payment.settings.type.select.message": "Please, select the third-party payment settings type",
     "warning.missing.otoroshi": "No Otoroshi instances configured or no entities configured",
-    "plan.update.successful": "The plan has been successfully created",
-    "plan.creation.successful": "The plan has been successfully modified",
-    "plan.deletion.successful": "The plan has been successfully deleted",
+    "update.plan.successful.toast.label": "The plan has been successfully modified",
     "plan.payment.setup.successful": "The payment settings of the plan has been successfully updated",
     "api.created": "Created",
     "api.published": "Published",
@@ -1465,7 +1462,7 @@
     "sidebar.dark.mode.button.aria.label": "Toggle light/dark mode",
 
 
-    "api.home.config.api.btn.label": "Manage API",
+    "api.home.config.api.btn.label": "Manage",
     "api.home.config.api.menu.configure": "Configure",
     "api.home.config.api.menu.clone": "Duplicate",
     "api.home.config.api.menu.new_version": "Create new version",
