--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -550,8 +550,8 @@
   "Forgot your password ?": "Mot de passe oublié ?",
   "create.account.link.label": "Créer un compte",
   "Api saved": "API sauvegardée",
-  "api.created.success": "API %s créée",
-  "group.created.success": "API groupe %s créée",
+  "api.created.successful.toast": "l'API %s a été créée avec succès",
+  "apigroup.created.successful.toast": "l'API groupe %s a été créé avec succès",
   "oops, something went wrong.": "Oups, quelque chose c'est mal passé.",
   "personal.token.empty.error": "Votre jeton perso. ne peut être vide",
   "remove.user.success": "l'utilisateur %s à été correctement supprimé",
@@ -565,10 +565,9 @@
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
   "api.creation.right.panel.title": "Création d'une API",
-  "api.creation.successful.toast": "l'API %s a été créée avec succès",
+  "apigroop.creation.right.panel.title": "Création d'un API groupe",
   "apigroup.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer un nouveau groupe d'APIs",
   "apigroup.creation.description.modal": "Vous allez créer un nouveau groupe d'API. Pour quelle équipe voulez-vous le créer ?",
-  "apigroup.creation.successful.toast": "Le group d'APIs %s a été créé avec succès",
   "Set font family from asset": "Définir la police de style depuis un asset",
   "Public": "Publique",
   "Private": "Privée",
@@ -649,7 +648,7 @@
   "Your message": "Votre message",
   "Send": "Envoyer",
   "delete.api.success": "L'API %s a été correctement supprimée",
-  "create.plan.succesful.toast.label": "Le plan %s a été correctement créé",
+  "create.plan.successful.toast.label": "Le plan %s a été correctement créé",
   "delete.plan.successful.toast.label": "Le plan %s a été correctement supprimé",
   "create.environment.successful.toast.label": "L'environnement %s a été correctement créé",
   "delete.environment.successful.toast.label": "L'environnement %s a été correctement supprimé",
@@ -1240,9 +1239,7 @@
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
   "third-party.payment.settings.type.select.message": "Merci de sélectionner un type de tiers de paiement à paramétrer",
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
-  "plan.update.successful": "Le plan a été mis à jour avec succès",
-  "plan.creation.successful": "Le plan a été créé avec succès",
-  "plan.deletion.successful": "Le plan a été supprimé avec succès",
+  "update.plan.successful.toast.label": "Le plan a été mis à jour avec succès",
   "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
   "api.created": "Créée",
   "api.published": "Publiée",
@@ -1463,7 +1460,7 @@
   "sidebar.notifications.button.aria.label": "Ouvrir le centre de notifications",
   "sidebar.dark.mode.button.aria.label": "Activer le mode clair/sombre",
 
-  "api.home.config.api.btn.label": "Gérer l'API",
+  "api.home.config.api.btn.label": "Configurer",
   "api.home.config.api.menu.configure": "Configurer",
   "api.home.config.api.menu.clone": "Dupliquer",
   "api.home.config.api.menu.new_version": "Créer une nouvelle version",
