--- a/manual/docs/04-cli/042-apis-to-business-website/11-dev-mode.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/11-dev-mode.mdx
@@ -7,7 +7,7 @@ In the first steps of this tutorial, we used the `watch` command to preview the 
 Run the following command:
 
 ```sh
-daikoku sh
+daikoku watch
 ```
 
 Then, open your browser and navigate to http://localhost:3333.  
