--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1257,6 +1257,11 @@
     "Process": "Process",
     "api.pricings.no.step.explanation": "It's seems that there is no process subscription request validation process",
     "api.pricings.add.first.step.btn.label": "Add a first validation step",
+    "api.pricings.quotas.value": "%s req./sec, %s req./day, %s req./month",
+    "api.pricings.pricing.label": "Pricing",
+    "api.pricings.otoroshi.target.value.none": "None",
+    "api.pricings.process.value.none": "None",
+    "api.pricings.process.value": "%s steps",
     "api.documentation.clone.page.modal.title": "Import documentation pages",
     "api.documentation.clone.page.placeholder": "Select all pages to clone",
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
