--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1410,6 +1410,9 @@
     "API.list": "APIs list",
     "more.nav.options": "More options",
     "api.access.modal.title": "Api access request",
+    "subscription.copy.cli.auth.label": "CLI auth.",
+    "subscription.copy.cli.auth.aria.label": "Copy the CLI Auth encoded credentials",
+    "subscription.copy.cli.auth.help": "Copy credentials as CLI auth. value",
     "subscription.copy.basic.auth.label": "basic auth.",
     "subscription.copy.basic.auth.aria.label": "Copy the Basic Auth encoded credentials",
     "subscription.copy.basic.auth.help": "Copy credentials as basic auth. value",
