--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1409,6 +1409,9 @@
   "API.list": "Liste des APIs",
   "more.nav.options": "Plus d'options",
   "api.access.modal.title": "demande d'accès à une API",
+  "subscription.copy.cli.auth.label": "CLI auth.",
+  "subscription.copy.cli.auth.aria.label": "Copier les secrets pour la CLI Daikoku",
+  "subscription.copy.cli.auth.help": "Copier les identifiants pour la CLI Daikoku.",
   "subscription.copy.basic.auth.label": "Basic auth.",
   "subscription.copy.basic.auth.aria.label": "Copier les secrets encodés en Basic Auth",
   "subscription.copy.basic.auth.help": "Copier les identifiants sous la forme de valeur Basic auth.",
