--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -802,7 +802,7 @@
     "Custom header": "Custom header",
     "api.custom.header.help": "Define a custom HTML API header.Use {{title}} to insert API title, {{ description }} to insert API small description",
     "get.apikey.requires.login": "Get an API key requires you to be logged in",
-    "consume.apikey": "Consume an API",
+    "consume.apikey": "Acces to API",
     "Mongo migration": "MongoDB to Postgres migration",
     "migration in progress ...": "migration in progress ...",
     "migrate database": "Migrate database",
@@ -1255,6 +1255,8 @@
     "subscription.process.httpRequest": "HTTP Request",
     "subscription.process.add.httpRequest.step.title": "HTTP Request step creation",
     "Process": "Process",
+    "api.pricings.list.environments.aria.label": "Environments list",
+    "api.pricings.list.plans.aria.label": "Usage plans list",
     "api.pricings.no.step.explanation": "It's seems that there is no process subscription request validation process",
     "api.pricings.add.first.step.btn.label": "Add a first validation step",
     "api.pricings.quotas.value": "%s req./sec, %s req./day, %s req./month",
