--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -802,7 +802,7 @@
   "Custom header": "Entête personnalisé",
   "api.custom.header.help": "Utiliser {{title}} pour insérer le nom de l'API, {{ description }} pour la petite description. Ajouter la classe \"btn-edit\" pour créer un lien vers la page d'édition de l'API",
   "get.apikey.requires.login": "Obtenir une clé d'API nécessite que vous soyez connecté",
-  "consume.apikey": "Consommer une API",
+  "consume.apikey": "Accédez à l'API",
   "Mongo migration": "Migration de MongoDB vers Postgres",
   "migration in progress ...": "migration en cours ...",
   "migrate database": "Migrer la base",
@@ -1254,6 +1254,8 @@
   "subscription.process.httpRequest": "Requête HTTP",
   "subscription.process.add.httpRequest.step.title": "Création de l'etape par requête HTTP",
   "Process": "Process",
+  "api.pricings.list.environments.aria.label": "Liste des environnements",
+  "api.pricings.list.plans.aria.label": "Liste des plans de souscription",
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
   "api.pricings.add.first.step.btn.label": "Ajouter une première étape de validation",
   "api.pricings.quotas.value": "%s req./sec, %s req./jour, %s req./mois",
