Add some documentation/information about testing

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -469,8 +469,10 @@
     "The apikey client id": "The API key client id",
     "Auth. type": "Auth. type",
     "otoroshi.test.key.generator.button": "Generate a dedicated testing key in Otoroshi",
-    "otoroshi.test.key.modal.description": "In order to make everything work, you'll have to add a tags match (OneTagIn / AllTagIn) in your service descriptor in the \"Api Keys Constraints\" section. Make sure this service descriptor is the right one for testing and not a production system.",
-    "otoroshi.test.key.modal.tag.name": "The tag you need to add is the following",
+    "otoroshi.test.key.modal.description.1": "You’ve just created a test API key. To ensure it works properly, you need to:",
+    "otoroshi.test.key.modal.description.2": "Enable the \"apikey mandatory tags\" module on the corresponding route in Otoroshi.",
+    "otoroshi.test.key.modal.description.3": "Set the following tag in the module configuration:",
+    "otoroshi.test.key.modal.description.4": "Without this configuration, test calls will fail with an access denied error.",
     "otoroshi.test.key.modal.apikey.name": "the name of the API key will be",
     "Generate": "Generate",
     "Generate an apikey for testing": "Generate an API key for testing",
