--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -469,8 +469,10 @@
   "The apikey client id": "Le client id de la clé d'API ",
   "Auth. type": "Type d'Auth.",
   "otoroshi.test.key.generator.button": "Générer une clé de test dédiée dans Otoroshi",
-  "otoroshi.test.key.modal.description": "Pour que tout fonctionne correctement, vous devez ajouter une correspondance de balises (OneTagIn / AllTagIn) dans votre descripteur de service dans la section \"Contraintes des clés API\". Assurez-vous que ce descripteur de service est le bon pour les tests et non un système de production.",
-  "otoroshi.test.key.modal.tag.name": "La balise que vous devez ajouter est la suivante",
+  "otoroshi.test.key.modal.description.1": "Vous venez de créer une clé de test. Pour que celle-ci fonctionne correctement, vous devez :",
+  "otoroshi.test.key.modal.description.2": "Activer le module \"apikey mandatory tags\" sur la route concernée dans Otoroshi.",
+  "otoroshi.test.key.modal.description.3": "Renseigner la balise suivante dans la configuration du module :",
+  "otoroshi.test.key.modal.description.4": "Sans cette configuration, les appels de test échoueront avec un refus d’accès.",
   "otoroshi.test.key.modal.apikey.name": "Le nom de la clé d'API",
   "Generate": "Générer",
   "Generate an apikey for testing": "Générer une clé d'API pour les tests",
