--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -780,6 +780,7 @@
     "Get API key": "Get API key",
     "Request API key": "Request API key",
     "otoroshi.testing.delete.confirm": "Are you sure you want to delete these testing settings?",
+    "api.testing.url.label": "Test url",
     "Select a auth type": "Select a auth type",
     "testing.key.creation": "Use Otoroshi to create testing API key",
     "Delete Testing ApiKey": "Delete testing API key",
