FIX #820 - use CLI to sync custom css, color theme & js

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1553,5 +1553,13 @@
     "add.api.documention.btn.label": "Create your first documentaiton page",
     "api.consumption.plan.btn.aria.label": "View the consumption of the %s plan",
     "api.consumption.plan.btn.label": "View the consumption",
-    "api.subscriptions.team.select.placeholder": "Select a team to view associated API keys"
+    "api.subscriptions.team.select.placeholder": "Select a team to view associated API keys",
+    "migration.custom.style.alert.title": "New way to manage custom code in Daikoku",
+    "migration.custom.style.alert.info.1": "Since version 18.3.0, the management of CSS, color themes, and JavaScript has been delegated to the Daikoku CLI.",
+    "migration.custom.style.alert.info.2": "A migration job has been run automatically to create CMS pages for your existing CSS, JS, and theme files.",
+    "migration.custom.style.alert.info.3": "👉 You can still inject CSS or JavaScript via an external URL.",
+    "migration.custom.style.alert.info.4": " However, inline code editing is now handled through the CLI.",
+    "migration.custom.style.alert.info.5": "📘 To learn more about the Daikoku CLI, check out the %s",
+    "migration.custom.style.alert.hide": "Hide message"
+    
 }
