FIX #844 - allow to delete last subscription process step

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1267,6 +1267,10 @@
     "api.pricings.otoroshi.target.value.none": "None",
     "api.pricings.process.value.none": "None",
     "api.pricings.process.value": "%s steps",
+    "api.pricings.otoroshi.target.panel.title": "Otoroshi target",
+    "api.pricings.quotas.panel.title": "Quotas",
+    "api.pricings.pricing.panel.title": "Pricing",
+    "api.pricings.subscription.process.panel.title": "Subscription process",
     "api.documentation.clone.page.modal.title": "Import documentation pages",
     "api.documentation.clone.page.placeholder": "Select all pages to clone",
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
