--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1266,6 +1266,10 @@
   "api.pricings.otoroshi.target.value.none": "Aucun",
   "api.pricings.process.value.none": "Aucun",
   "api.pricings.process.value": "%s étapes",
+  "api.pricings.otoroshi.target.panel.title": "Otoroshi cible",
+  "api.pricings.quotas.panel.title": "Quotas",
+  "api.pricings.pricing.panel.title": "Tarif",
+  "api.pricings.subscription.process.panel.title": "Processus de souscription",
   "api.documentation.clone.page.modal.title": "Import des pages de documentation",
   "api.documentation.clone.page.placeholder": "Sélectionnez toutes les pages à cloner",
   "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
