Unify date usage & format

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1,8 +1,10 @@
 {
-    "moment.locale": "en",
-    "moment.date.format": "yyyy, MMM. do to HH:mm z",
-    "moment.date.format.without.hours": "yyyy, MMM. do",
-    "moment.date.format.short": "yyyy/MM/dd",
+    "date.locale": "en",
+    "date.format": "yyyy, MMM. do HH:mm",
+    "date.format.without.hours": "yyyy, MMM. do",
+    "date.format.short": "yyyy/MM/dd",
+    "date.format.short.millis": "yyyy/MM/dd HH:mm:ss.SSS",
+    "date.format.short.seconds": "yyyy/MM/dd HH:mm:ss",
     "your teams": "Your teams",
     "find team": "Find a team",
     "My profile": "My profile",
@@ -748,12 +750,6 @@
     "Apikey refresh": "API key refresh",
     "Load previous messages": "Load previous messages",
     "Start new conversation": "New conversation",
-    "moment.duration.seconds": "few sec",
-    "moment.duration.minutes": "%s min",
-    "moment.duration.days": "%s d",
-    "moment.duration.weeks": "%s w",
-    "moment.duration.months": "%s m",
-    "moment.duration.years": "%s y",
     "Unknown user": "Unknown user",
     "Unknown teal": "Unknown team",
     "European server": "European server",
