--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1,8 +1,10 @@
 {
-  "moment.locale": "fr",
-  "moment.date.format": "dd MMM yyyy à HH:mm",
-  "moment.date.format.without.hours": "dd MMM yyyy",
-  "moment.date.format.short": "dd/MM/yyyy",
+  "date.locale": "fr",
+  "date.format": "dd MMM yyyy HH:mm",
+  "date.format.without.hours": "dd MMM yyyy",
+  "date.format.short": "dd/MM/yyyy",
+  "date.format.short.millis": "dd/mm/yyyy HH:mm:ss.SSS",
+  "date.format.short.seconds": "dd/mm/yyyy HH:mm:ss",
   "your teams": "Vos équipes",
   "find team": "Trouver une équipe",
   "My profile": "Mon profil",
@@ -748,12 +750,6 @@
   "Apikey refresh": "Mise à jour d'une clé d'API",
   "Load previous messages": "Messages précédents",
   "Start new conversation": "Nouvelle conversation",
-  "moment.duration.seconds": "quelques sec",
-  "moment.duration.minutes": "%s min",
-  "moment.duration.days": "%s j",
-  "moment.duration.weeks": "%s sem",
-  "moment.duration.months": "%s m",
-  "moment.duration.years": "%s a",
   "Unknown user": "Utilisateur inconnu",
   "Unknown team": "Équipe inconnue",
   "European server": "Serveur européen",
