right french short date format

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -3,8 +3,8 @@
   "date.format": "dd MMM yyyy HH:mm",
   "date.format.without.hours": "dd MMM yyyy",
   "date.format.short": "dd/MM/yyyy",
-  "date.format.short.millis": "dd/mm/yyyy HH:mm:ss.SSS",
-  "date.format.short.seconds": "dd/mm/yyyy HH:mm:ss",
+  "date.format.short.millis": "dd/MM/yyyy HH:mm:ss.SSS",
+  "date.format.short.seconds": "dd/MM/yyyy HH:mm:ss",
   "your teams": "Vos équipes",
   "find team": "Trouver une équipe",
   "My profile": "Mon profil",
